--- a/src/popup.html
+++ b/src/popup.html
@@ -14,14 +14,14 @@
   <script src="./popup.js" defer></script>
   <div id="shortcuts"></div>
   <div id="device-tabs"></div>
-  <a class="action" title="Leave a Review" href="https://chrome.google.com/webstore/detail/minimo/fanglmholkgdapjcfohfhnofcacjiodl/" target="_blank">
-    Leave a Review
+  <a class="action" title="Minimo on GitHub" href="https://github.com/krismuniz/minimo/#usage-guide" target="_blank">
+    Usage Guide
   </a>
   <a class="action" title="About Minimo" href="https://projects.krismuniz.com/minimo/" target="_blank">
-    About Minimo
+    Homepage
   </a>
-  <a class="action" title="Minimo on GitHub" href="https://github.com/krismuniz/minimo/" target="_blank">
-    View Source Code
+  <a class="action" title="Leave a Review" href="https://chrome.google.com/webstore/detail/minimo/fanglmholkgdapjcfohfhnofcacjiodl/" target="_blank">
+    Leave a Review
   </a>
 </body>
 </html>
