Add material red theme

--- a/src/new-tab-page.html
+++ b/src/new-tab-page.html
@@ -65,10 +65,12 @@
           <option value="deep-black">Deep Black</option>
           <option disabled>-</option>
           <option value="forrest-green">Forrest Green</option>
+          <option value="material-red">Material Red</option>
           <option value="material-blue">Material Blue</option>
           <option value="savage-pink">Savage Pink</option>
           <option value="bumblebee">Bumblebee</option>
           <option value="persian-green">Persian Green</option>
+          <option disabled>Custom Theme (coming soon)</option>
         </select>
       </div>
       <div class="input-container">
