Added 12/24h time foramt setting

--- a/src/new-tab-page.html
+++ b/src/new-tab-page.html
@@ -77,6 +77,13 @@
         <input id="settings-favicons-input" type="checkbox" />
         <label class="inline" for="settings-favicons-input">Show Favicons</label>
       </div>
+      <div class="input-container">
+        <label for="settings-timeformat-input">Time format</label>
+        <select id="settings-timeformat-input">
+          <option value="12">12h</option>
+          <option value="24">24h</option>
+        </select>
+      </div>
       <details>
         <summary>Advanced</summary>
         <div class="input-container">
