Add option to show/hide battery status

--- a/src/new-tab-page.html
+++ b/src/new-tab-page.html
@@ -77,6 +77,10 @@
         <input id="settings-favicons-input" type="checkbox" />
         <label class="inline" for="settings-favicons-input">Show Favicons</label>
       </div>
+      <div class="input-container">
+        <input id="settings-battery-input" type="checkbox" />
+        <label class="inline" for="settings-battery-input">Show Battery</label>
+      </div>
       <details>
         <summary>Advanced</summary>
         <div class="input-container">
