❄ Let it snow, sometimes

--- a/src/new-tab-page.html
+++ b/src/new-tab-page.html
@@ -94,7 +94,7 @@
         <div class="input-container">
           <label for="settings-writing-mode-shortcut-input">Writing Mode Keyboard Shortcut</label>
           <input id="settings-writing-mode-shortcut-input" data-shortcut-listener="true" type="text" />
-          <span id="settings-writing-mode-shortcut-info" class="info">Type-in a key combination to that will toggle writing mode.</span>
+          <span id="settings-writing-mode-shortcut-info" class="info">Type in a key combination that will toggle writing mode.</span>
           <span id="settings-writing-mode-shortcut-info-2" class="info">It must include a modifier key (alt, shift, control, etc.)</span>
         </div>
         <div class="input-container">
