Add holiday special message and new year's countdown

--- a/src/new-tab-page.html
+++ b/src/new-tab-page.html
@@ -119,6 +119,7 @@
       <span class="time"></span>
       <span class="date"></span>
       <span class="status"></span>
+      <span class="special-message hidden holidays"></span>
     </div>
     <div class="devices-box">
       <div class="tabs"></div>
