Add the ability to show and hide features - add the ability to toggle connection status - add the ability to toggle synced tabs

--- a/src/new-tab-page.html
+++ b/src/new-tab-page.html
@@ -75,8 +75,17 @@
         </select>
       </div>
       <div class="input-container inline">
+        <input id="settings-devices-input" type="checkbox" />
+        <label class="inline" for="settings-devices-input">Show Remote Tabs</label>
+      </div>
+      <div class="input-container inline">
         <input id="settings-favicons-input" type="checkbox" />
         <label class="inline" for="settings-favicons-input">Show Favicons</label>
+      </div>
+      <br/>
+      <div class="input-container inline">
+        <input id="settings-connection-input" type="checkbox" />
+        <label class="inline" for="settings-connection-input">Show Connection Status</label>
       </div>
       <div class="input-container inline">
         <input id="settings-battery-input" type="checkbox" />
