--- a/src/new-tab-page.html
+++ b/src/new-tab-page.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
   <link rel="stylesheet" type="text/css" href="./css/quill.bubble.css">
   <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
+
 <body>
   <script src="./libraries/dom.js"></script>
   <script src="./load-theme.js"></script>
@@ -21,10 +23,12 @@
   <script defer src="index.js"></script>
   <div id="welcome-dialog" class="dialog corner hidden">
     <div id="welcome-dialog-title" class="dialog-title">👋 Welcome to Minimo!</div>
-    <p class="dialog-body">Right-click the page or a shortcut to see contextual options to customize your new tab page or toggle writing mode. </p>
+    <p class="dialog-body">Right-click the page or a shortcut to see contextual options to customize your new tab page
+      or toggle writing mode. </p>
     <p class="dialog-body">If you like Minimo, don't forget to leave a review later!</p>
     <div class="button-group no-margin">
-      <a id="welcome-help-button" class="button" target="_blank" href="https://github.com/krismuniz/minimo/#usage-guide">Help</a>
+      <a id="welcome-help-button" class="button" target="_blank"
+        href="https://github.com/krismuniz/minimo/#usage-guide">Help</a>
       <button id="welcome-done-button" class="button primary">Got It</button>
     </div>
   </div>
@@ -37,12 +41,14 @@
       <div id="shortcut-dialog-title" class="dialog-title">Edit shortcut</div>
       <div class="input-container">
         <label for="shortcut-name-input">Name</label>
-        <input id="shortcut-name-input" placeholder='e.g. "Google", "Work Mail", etc.' type="text" autofocus tabindex="1" aria-label="Name" data-context-menu="default">
+        <input id="shortcut-name-input" placeholder='e.g. "Google", "Work Mail", etc.' type="text" autofocus
+          tabindex="1" aria-label="Name" data-context-menu="default">
         <span id="shortcut-name-feedback"></span>
       </div>
       <div class="input-container">
         <label for="shortcut-url-input">URL</label>
-        <input id="shortcut-url-input" placeholder='e.g. "https://example.com"' type="url" tabindex="2" aria-label="URL" data-context-menu="default">
+        <input id="shortcut-url-input" placeholder='e.g. "https://example.com"' type="url" tabindex="2" aria-label="URL"
+          data-context-menu="default">
         <span id="shortcut-url-feedback"></span>
       </div>
       <div class="button-group">
@@ -54,16 +60,20 @@
       <div id="tz-dialog-title" class="dialog-title">Add a time zone clock</div>
       <div class="input-container">
         <label for="tz-name-input">Friendly Name</label>
-        <input id="tz-name-input" maxlength="16" type="text" autofocus tabindex="1" aria-label="Friendly Time Zone Name" data-context-menu="default" placeholder='e.g. "Los Angeles", "Home", etc'>
+        <input id="tz-name-input" maxlength="16" type="text" autofocus tabindex="1" aria-label="Friendly Time Zone Name"
+          data-context-menu="default" placeholder='e.g. "Los Angeles", "Home", etc'>
         <span id="tz-name-feedback"></span>
       </div>
       <div class="input-container">
         <label for="tz-timezone-input">Time Zone</label>
-        <input id="tz-timezone-input" list="tz-timezone-list" type="text" autofocus tabindex="1" aria-label="Time Zone Name" data-context-menu="default" placeholder='e.g. "America / Los Angeles"'>
+        <input id="tz-timezone-input" list="tz-timezone-list" type="text" autofocus tabindex="1"
+          aria-label="Time Zone Name" data-context-menu="default" placeholder='e.g. "America / Los Angeles"'>
         <datalist id="tz-timezone-list"></datalist>
         <span id="tz-timezone-feedback"></span>
       </div>
-      <p class="info" style="max-width: 25rem;">Time zones are still in <em>beta</em>. <a class="url" href="https://github.com/krismuniz/minimo/issues/new/choose">Let us know</a> how we can improve this feature.</p>
+      <p class="info" style="max-width: 25rem;">Time zones are still in <em>beta</em>. <a class="url"
+          href="https://github.com/krismuniz/minimo/issues/new/choose">Let us know</a> how we can improve this feature.
+      </p>
       <div class="button-group">
         <button id="tz-cancel-button" class="button">Cancel</button>
         <button id="tz-save-button" class="button primary">Save</button>
@@ -125,8 +135,10 @@
         <div class="input-container">
           <label for="settings-writing-mode-shortcut-input">Writing Mode Keyboard Shortcut</label>
           <input id="settings-writing-mode-shortcut-input" data-shortcut-listener="true" type="text" />
-          <span id="settings-writing-mode-shortcut-info" class="info">Type in a key combination that will toggle writing mode.</span>
-          <span id="settings-writing-mode-shortcut-info-2" class="info">It must include a modifier key (alt, shift, control, etc.)</span>
+          <span id="settings-writing-mode-shortcut-info" class="info">Type in a key combination that will toggle writing
+            mode.</span>
+          <span id="settings-writing-mode-shortcut-info-2" class="info">It must include a modifier key (alt, shift,
+            control, etc.)</span>
         </div>
         <div class="input-container">
           <label for="settings-css-textarea">Custom CSS</label>
@@ -158,4 +170,5 @@
     </div>
   </div>
 </body>
+
 </html>
